package msg;
import "define.proto";

// gw请求注册到match
message GW2MS_ReqRegist {
    optional string account = 1;
    optional string passwd  = 2;
    optional string agentname = 3;
    optional msg.IpHost host = 4;
}


// 注册返回
message MS2GW_RetRegist {
    optional string errcode = 1;
    optional msg.IpHost host = 2;
}


// 心跳
message GW2MS_HeartBeat {
}


// 
message MS2GW_HeartBeat {
}

// 请求创建游戏房间
message GW2MS_ReqCreateRoom {
    optional uint64 userid = 1;
    optional int32 gamekind = 2;
    optional int32 gridnum = 3;
}

// 
message MS2GW_RetCreateRoom {
    optional uint64 userid = 1;
    optional int64  roomid = 2;
    optional string errcode = 3;
    optional string roomagent = 4;
}

